# weather-energy-analysis

./: .gitignore  AI_USAGE.md  DEPLOYMENT.md  README.md  __init__.py  claude.md  cron_jobs.txt  cron_jobs_with_auto_push.txt  debug_fetch.py  pyproject.toml  pyrightconfig.json  requirements.txt  streamlit_app.py  video_link.md
.streamlit/: config.toml  secrets.toml
config/: config.yaml  config_test.yaml
dashboards/: __init__.py  app.py
logs/: daily_quality_report_2025-07-07.json  daily_quality_report_2025-08-13.json  daily_quality_report_2025-08-17.json  daily_quality_report_2025-08-18.json  daily_quality_report_2025-08-19.json  daily_quality_report_2025-08-20.json  daily_quality_report_2025-08-21.json  daily_quality_report_2025-08-22.json  daily_quality_report_2025-08-23.json  daily_quality_report_2025-08-24.json  daily_quality_report_2025-08-25.json  daily_quality_report_2025-08-26.json  daily_quality_report_2025-08-27.json  daily_quality_report_2025-08-28.json  daily_quality_report_2025-08-29.json  daily_quality_report_2025-08-30.json  daily_quality_report_2025-08-31.json  daily_quality_report_2025-09-01.json  daily_quality_report_2025-09-02.json  daily_quality_report_2025-09-03.json  daily_quality_report_2025-09-04.json  daily_quality_report_2025-09-05.json  daily_quality_report_2025-09-06.json  daily_quality_report_2025-09-07.json  daily_quality_report_2025-09-08.json  daily_quality_report_2025-09-09.json  daily_quality_report_2025-09-10.json  daily_quality_report_2025-09-11.json  daily_quality_report_2025-09-12.json  daily_quality_report_2025-09-13.json  (+651 more)
(+352 files in other folders)
